# teivaka-tfos

./: .gitignore  CLAUDE.md  PLATFORM_COMPLETION_SPRINT.md  TEIVAKA_Monetization_Strategy.md  TFOS_BUILD_BLUEPRINT.md  TFOS_Catalog_Redesign_Doctrine_2026-04-30.md  TFOS_Catalog_Redesign_Doctrine_Amendment_v2_2026-04-30.md  TFOS_MASTER_BUILD_INSTRUCTION.md  TFOS_Master_Build_Instruction.md  TFOS_Vertical_Completeness_Doctrine.md  day_3a_standard_shell_spec.md  deploy.sh
11_application_code/: .gitignore  Makefile  alembic.ini  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt
11_application_code/alembic/: env.py
11_application_code/alembic/versions/: 001_initial_extensions.py  002_shared_schema.py  003_tenant_schema.py  004_materialized_views.py  005_functions.py  006_seed_data.py  007_idempotency_keys.py  008_add_password_hash.py  009_enhanced_registration.py  010_admin_role.py  011_password_reset_columns.py  012_add_farm_worker_count_limits.py  013_phone_otp_columns.py  014_growth_foundations.py  015a_fix_chemical_compliance.py  015b_fix_field_event_whd_trigger.py  015c_fix_tenant_rls_with_check.py  015d_fix_financials_trigger.py  015e_fix_financials_trigger_v2.py  015f_fix_referral_rewards_rls.py  015g_qualify_tenant_func_refs.py  016a_fix_cycle_status_drift.py  016b_fix_validate_rotation_alts.py  (+196 more)
11_application_code/app/: __init__.py  config.py  main.py
11_application_code/openclaw/: INTEGRATION_GUIDE.md  MEMORY_template.md  agent_config.yaml  system_prompt.md  tools.yaml
11_application_code/tests/: test_near_you_no_crm_import.py
(+772 files in other folders)
